--- a/Styles/stopwatch.css
+++ b/Styles/stopwatch.css
@@ -6,4 +6,60 @@ body {
   background-image: url('../Images/background-page2.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100vh;
+  width: 100%;
+  padding: 0px;
+  margin: 0px;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
+
+.navigation-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 150px;
+  position: relative;
+  bottom: 432px;
+  right: 878px;
+
+}
+
+.home-button, .glasstime-button {
+
+  color: white;
+  background-color: rgba(61, 61, 61, 0.116);
+  backdrop-filter: blur(8px);
+  width: 36px;
+  height: 36px;
+  border-radius: 8px;
+  border-width: 0px;
+  cursor: pointer;
+  padding: 4px;
+  transition: box-shadow 0.5s;
+}
+
+.home-button:hover, .glasstime-button:hover {
+  box-shadow: 0px 0px 8px 2px rgb(221, 221, 221);
+}
+
+.stopwatch-container {
+  color: white;
+  font-size: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.names-container {
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
